2007-08-24  David Bateman  <dbateman@free.fr>

	* plot/__go_draw_axes__.m: Treat text color property.

2007-08-24  John W. Eaton  <jwe@octave.org>

	* plot/subplot.m, plot/plot.m, plot/grid.m:
	Use p = get (h, "prop") instead of obj = get (h); p = obj.prop.

	* miscellaneous/movefile.m: Separate second and third args and
	use p1 and p2, not f1 and f2 when constructing arguments for
	calls to system.  From Michael Goffioul <michael.goffioul@gmail.com>.

2007-08-24  Michael Goffioul  <michael.goffioul@gmail.com>

	* set/intersect.m: Make it work with cell arrays of strings.

2007-08-24  David Bateman  <dbateman@free.fr>

        * geometry/convhull.m, geometry/delaunay.m, geometry/delaunay3.m, 
        geometry/griddata.m, geometry/voronoi.m, geometry/voronoin.m: New 
        functions ported from octave-forge.
        * geometry/delaunayn.m, geometry/dsearch.m, geometry/dsearchn.m,
        geometry/griddata3.m, geometry/griddatan.m, geometry/trimesh.m, 
        geometry/triplot.m, geometry/tsearchn.m:
        New functions.
        * geometry/voronoi.m: Remove duplicate edges from Voronoi diagram.
        * geometry/Makefile.in (SOURCES): Add functions above.
        * configure.in (AC_CONFIG_FILES): Add new file geometry/Makefile.
        
2007-08-23  John W. Eaton  <jwe@octave.org>

	* pkg/pkg.m: Avoid using installed_packages for both function and
	variable name.

2007-08-23  David Bateman  <dbateman@free.fr>

	* plot/plot.m: Allow first arg to be axes handle.

2007-08-22  David Bateman  <dbateman@free.fr>

	* control/base/nichols.m: Correct for misnamed variable, and ensure
	outputs are returned only if requested.

2007-08-22  Donald Parsons  <dparsons@brightdsl.net>

	* control/base/nichols.m: Fix typo.

2007-08-13  John W. Eaton  <jwe@octave.org>

	* plot/meshgrid.m: Use repmat instead of multiplication.

2007-08-10  Peter A. Gustafson  <petegus@umich.edu>

	* plot/__go_draw_axes__.m: Add axes position to the usingclause,